--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </article>
     </main>
     <footer>
-        <p>Criado por <a href="index0.html">Luiz Roberto</a></p>
+        <p>Criado por <a href="index0.html" target="_blank">Luiz Roberto</a></p>
     </footer>
     
 </body>
