--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
+        <a href="#">Contato</a>
         <a href="#">Fale Conosco
         </a>
     </nav>
